[gd_scene load_steps=3 format=3 uid="uid://blsd0w1yxc7ue"]

[ext_resource type="FontFile" uid="uid://0hn4u6wn6lld" path="res://Fonts/ThaleahFat.ttf" id="1_5a0y5"]
[ext_resource type="Script" uid="uid://cfntylxwee357" path="res://Scenes/power_up_panel.gd" id="1_srh22"]

[node name="PowerUpChoicePanel" type="Panel"]
custom_minimum_size = Vector2(400, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srh22")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -41.0
offset_top = 15.0
offset_right = 45.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_5a0y5")
text = "Title Name"
horizontal_alignment = 1

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -188.0
offset_top = -68.0
offset_right = 193.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_5a0y5")
text = "Lorem Ipsum"
horizontal_alignment = 1

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -36.0
offset_right = 42.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_5a0y5")
text = "Lvl.0"
horizontal_alignment = 1
